Integrate native BLS crypto and enhance wallet features
This commit significantly upgrades the Android wallet application by integrating native BLS cryptography via a JNI bridge, overhauling wallet management, and implementing a robust Tau rule syntax validator.

Key Changes:

- **Native BLS Cryptography:**
    - Configured the Android build (Gradle, CMake) to compile and link the `blst` BLS library using a JNI wrapper.
    - Replaced stub cryptographic functions with native calls for proper key generation (32-byte private key), public key derivation (48-byte compressed G1 public key), and transaction signing.

- **Wallet Management & Persistence:**
    - Implemented persistence for the server host and port settings, saving user configuration between sessions.
    - Added a one-time, seamless migration for legacy wallet storage formats to a new, more organized structure.
    - Included a migration path to convert older 48-byte private keys to the new 32-byte format automatically upon loading.
    - Enhanced wallet loading with robust validation to prevent crashes from malformed wallet data.

- **Tau Rule Syntax Validator:**
    - Replaced the previous basic syntax check with a sophisticated, token-based validator.
    - The new validator accurately recognizes Tau language constructs (operators, keywords, literals, variables) and provides more precise, user-friendly error messages for invalid syntax.

- **Build & UI:**
    - Updated the Android Gradle Plugin version and configured ABI filters for broader device compatibility (`arm64-v8a`, `armeabi-v7a`, `x86_64`).
    - Minor UI text improvement for clarity.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -15,6 +15,24 @@ android {
         versionName "0.1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // Pass BLST_DIR to CMake
+        def props = new Properties()
+        def lp = rootProject.file('local.properties')
+        if (lp.exists()) {
+            lp.withInputStream { props.load(it) }
+        }
+        def blstDir = props.getProperty('blst.dir', System.getenv('BLST_DIR') ?: '/Users/ak/idni/blst')
+        externalNativeBuild {
+            cmake {
+                arguments "-DBLST_DIR=${blstDir}"
+            }
+        }
+
+        // Target common ABIs; adjust as needed
+        ndk {
+            abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86_64'
+        }
     }
 
     buildTypes {
@@ -37,6 +55,14 @@ android {
                 'META-INF/NOTICE*'
         ]
     }
+
+    // Configure CMake build for JNI wrapper
+    externalNativeBuild {
+        cmake {
+            path file('src/main/cpp/CMakeLists.txt')
+        }
+    }
+
 }
 
 dependencies {
@@ -45,4 +71,3 @@ dependencies {
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
-
