--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,18 @@
 attrs==25.3.0
 base58==2.1.1
-greenlet==3.2.4
 hypothesis==6.140.3
 idna==3.10
 iniconfig==2.1.0
+libp2p==0.4.0
 multiaddr==0.0.9
+PyNaCl==1.6.1
 netaddr==1.3.0
 outcome==1.3.0.post0
 packaging==25.0
 pluggy==1.6.0
+protobuf>=4.21.0,<5.0.0
 Pygments==2.19.2
+py-ecc==8.0.0
 pytest==8.4.1
 pytest-asyncio==1.1.0
 six==1.17.0
