Implement Proof-of-Authority consensus with block signing and state management Add BLS signature support to blocks with miner authority configuration Implement state hashing using BLAKE3 and state locator system Create SoleMiner service for PoA block production with threshold controls Add PoA state store and mock Tau engine for transaction validation Enhance network sync with signature verification and state fields Update mempool reconciliation and add comprehensive PoA component tests Add TAU_FORCE_TEST env var for skipping Tau validation in tests Update dependencies (base58, multiaddr, blake3, pytest-trio) and bootstrap config Minor code refactoring

--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,13 @@ node_modules/
 # Temprorary files
 docs/*.md
 *.txt
+*.md
+.env*
+!README.md
+!WALLET.md
 !NOTICE.txt
+!LICENSE.md
+!WALLET_USAGE.md
 
 # Python
 __pycache__/
@@ -94,13 +100,10 @@ ehthumbs_vista.db
 *.stackdump
 [Dd]esktop.ini
 $RECYCLE.BIN/
+.taskmaster
 *.cab
 *.msi
 *.msix
 *.msm
 *.msp
 *.lnk
-AGENTS.md
-.env*
-.gemini*
-.taskmaster*
