--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 attrs==25.3.0
-base58==2.1.1
+base58==1.0.3
+blake3==0.4.1
 hypothesis==6.140.3
 idna==3.10
 iniconfig==2.1.0
 libp2p==0.4.0
-multiaddr==0.0.9
+multiaddr==0.1.0
 PyNaCl==1.6.1
 netaddr==1.3.0
 outcome==1.3.0.post0
@@ -21,3 +22,5 @@ sortedcontainers==2.4.0
 trio==0.30.0
 trio_asyncio==0.15.0
 varint==1.0.2
+pytest-trio==0.8.0
+
