Integrate DHT-backed formula storage and thread-safe gossip broadcasts
Persist Tau rules (“formula”) in the DHT keyed by sha256, add sync DHT get bridging via Trio token, and tighten gossip RPC/subscription handling to make block/tx announcements reliable across threads; broadcast newly created blocks and default to a persistent libp2p identity key path.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 # pytest.ini
 [pytest]
-# Trio-based tests
-asyncio_mode = strict
+# Trio-based tests - use 'auto' mode to allow both asyncio and trio tests
+asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
 asyncio_default_test_loop_scope = function
 
