Hydrate DHT state on startup and cap handshake provider advertisements plus Android wallet improvements
Republish persisted accounts + Tau rules snapshots into the local DHT after network startup so secondary nodes can fetch/apply state via DHT instead of re-validating PoA block txs. Also harden Tau prompt parsing, simplify genesis rule proposal handling, make host readiness/persistence deterministic, and add tests for handshake truncation and Tau prompt regexes.
Revamp the Android wallet UI (Material theme, dropdown host/wallet/recipient, better JSON escaping, rule generator + peer fetch) and add `getallaccounts` RPC for populating recipient suggestions. Also add a testnet auto-faucet flag for unknown balances and tighten Tau transfer rules with explicit bitvector widths.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /tmp/
 /venv/
 /_old.git/
+/build/
 
 # Logs
 logs
@@ -32,6 +33,7 @@ docs/*.md
 *.txt
 *.md
 .env*
+MagicMock
 !README.md
 !NOTICE.txt
 !LICENSE.md
