--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,9 @@
 # pytest.ini
 [pytest]
-# Trio-based tests - use 'auto' mode to allow both asyncio and trio tests
-asyncio_mode = auto
+# Trio-based tests are handled by pytest-trio (via `pytest.mark.trio`).
+# Keep pytest-asyncio in strict mode so it does not automatically claim *all*
+# async tests/fixtures as asyncio-based.
+asyncio_mode = strict
 asyncio_default_fixture_loop_scope = function
 asyncio_default_test_loop_scope = function
 
