Add configurable libp2p connection/resource limits
Expose connection caps and per-peer rate limiting in config, wire them into HostManager via libp2p ResourceManager, and add a regression test.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /py_ecc/
-/data/
+/data*
 /tmp/
 /venv/
 /_old.git/
@@ -30,7 +30,6 @@ node_modules/
 
 # Temprorary files
 docs/*.md
-tests/*phase*
 *.txt
 *.md
 .env*
