--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ netaddr==1.3.0
 outcome==1.3.0.post0
 packaging==25.0
 pluggy==1.6.0
-protobuf>=4.21.0,<5.0.0
+protobuf>=6.33.4
 Pygments==2.19.2
 py-ecc==8.0.0
 pytest==8.4.1
